# ensembling-saes

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
cache_activations_configs/: gelu-1l-test.yaml  gelu-1l.yaml  pythia-70m-deduped-layer4.yaml
scripts/: cache_activations.py  check_cache_consistency.py  evaluate_ensemble_recon.py  evaluate_ensemble_stability.py  evaluate_sparsity_metrics.py  evaluate_use_cases.py  run_setup_train.sh  run_train_parallel.py  run_train_parallel.sh  save_all_test_activations.py  setup_train.py  setup_train_ensemble.py  train.py  train_ensemble.py
src/ensembling_saes/: __init__.py  activations_store.py  cache_activations_runner.py  evals.py  paths.py  sae_training_runner.py  utils.py
src/ensembling_saes/ensembling/: __init__.py  bagging.py  base.py  boosting.py
src/ensembling_saes/training/: sae_trainer.py  training_boosted_sae.py
test_configs/: ensemble-eval-param-list.yaml  gelu-1l-param-list.yaml  gelu-1l.yaml  gemma-2-2b-param-list.yaml  gemma-2-2b.yaml  pythia-160m-param-list.yaml  pythia-160m.yaml
train_configs/: gelu-1l-param-list.yaml  gelu-1l.yaml  gemma-2-2b-param-list.yaml  gemma-2-2b.yaml  pythia-160m-param-list.yaml  pythia-160m.yaml  pythia-70m-deduped-ensemble-param-list.yaml  pythia-70m-deduped-param-list.yaml  pythia-70m-deduped.yaml
