[metadata]
name = ensembling-saes
version = 0.0.1

[options]
package_dir =
    =src
packages =
    find:
install_requires =
    sae-lens==5.3.1
    sae-bench==0.3.2
    transformer-lens==2.11.0
    torchmetrics
    seaborn

[options.packages.find]
where =
    src

[options.extras_require]
dev =
    pre-commit
    toml
    jupyterlab
